<resources>
    <string name="app_name">ScoreCardV2</string>
    <string name="playerNamesTitle">Enter Player Names</string>
    <string name="player1Name" />
    <string name="player2Name" />
    <string name="player3Name" />
    <string name="player4Name" />
    <string name="startGameButton">Start Game</string>
    <string name="front9Title"></string>
    <string name="holeTitleF9">Hole</string>
    <string name="player1" />
    <string name="player2" />
    <string name="player3" />
    <string name="player4" />
    <string name="hole1">1</string>
    <string name="hole2">2</string>
    <string name="hole3">3</string>
    <string name="hole4">4</string>
    <string name="hole5">5</string>
    <string name="hole6">6</string>
    <string name="hole7">7</string>
    <string name="hole8">8</string>
    <string name="hole9">9</string>
    <string name="back9Button">Back 9</string>
    <string name="score1P1" />
    <string name="score1P2" />
    <string name="score1P3" />
    <string name="score1P4" />
    <string name="score2P1" />
    <string name="score2P2" />
    <string name="score2P3" />
    <string name="score2P4" />
    <string name="score3P1" />
    <string name="score3P2" />
    <string name="score3P3" />
    <string name="score3P4" />
    <string name="score4P1" />
    <string name="score4P2" />
    <string name="score4P3" />
    <string name="score4P4" />
    <string name="score5P1" />
    <string name="score5P2" />
    <string name="score5P3" />
    <string name="score5P4" />
    <string name="score6P1" />
    <string name="score6P2" />
    <string name="score6P3" />
    <string name="score6P4" />
    <string name="score7P1" />
    <string name="score7P2" />
    <string name="score7P3" />
    <string name="score7P4" />
    <string name="score8P1" />
    <string name="score8P2" />
    <string name="score8P3" />
    <string name="score8P4" />
    <string name="score9P1" />
    <string name="score9P2" />
    <string name="score9P3" />
    <string name="score9P4" />
    <string name="finalScoreTitle">Final Score</string>
    <string name="finalScoreP1Name" />
    <string name="finalScoreP2Name" />
    <string name="finalScoreP3Name" />
    <string name="finalScoreP4Name" />
    <string name="finalScoreP1" />
    <string name="finalScoreP2" />
    <string name="finalScoreP3" />
    <string name="finalScoreP4" />
    <string name="finishGameButton">Finish Game</string>
    <string name="newGameButton">New Game</string>
    <string name="GLFirstPlayerName" />
    <string name="GLSecondPlayerName" />
    <string name="GLThirdPlayerName" />
    <string name="GLFourthPlayerName" />
    <string name="enterCourseTitle">Enter Course Details</string>
    <string name="courseName" />
    <string name="coursePar" />
    <string name="courseLocation" />
    <string name="addCourseToDB">Add Course</string>
    <string name="GLCourseName">Course</string>
    <string name="GLPlayerNames">Players</string>
    <string name="toPlayerNamesButton">Play</string>
    <string name="vewGamesButton">games</string>
    <string name="viewCoursesButton">courses</string>
    <string name="backToMenuButton">back to menu</string>
    <string name="finalScoreScore">Score:</string>
    <string name="finalScorePlayers">Players:</string>
    <string name="finalScorePar">Par:</string>
    <string name="finalParP1" />
    <string name="finalParP2" />
    <string name="finalParP3" />
    <string name="finalParP4" />
    <string name="toAddCourseButton">Add A Course</string>
    <string name="selectCourseTitle">Select A Course</string>
    <string name="courseNameList">Course Name</string>
    <string name="courseLocationList">Course Location</string>
    <string name="courseParList">Course Par</string>


</resources>
