<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8fffc"
    tools:context="cormac.activities.PlayerNames">

    <TextView
        android:id="@+id/playerNamesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/playerNamesTitle"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/player1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/player2Name"
        android:layout_below="@+id/playerNamesTitle"
        android:ems="10"
        android:hint="Player 1"
        android:inputType="textPersonName"
        android:text="@string/player1Name" />

    <EditText
        android:id="@+id/player2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player1Name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:ems="10"
        android:hint="Player 2"
        android:inputType="textPersonName"
        android:text="@string/player2Name" />

    <EditText
        android:id="@+id/player3Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player2Name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:ems="10"
        android:hint="Player 3"
        android:inputType="textPersonName"
        android:text="@string/player3Name" />

    <EditText
        android:id="@+id/player4Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player3Name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:ems="10"
        android:hint="Player 4"
        android:inputType="textPersonName"
        android:text="@string/player4Name" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/whiteColor"
        android:text="@string/startGameButton" />

</RelativeLayout>
