<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8fffc"
    tools:context="cormac.activities.Start">

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="145dp"
        android:text="@string/toPlayerNamesButton" />

    <Button
        android:id="@+id/viewGamesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/playButton"
        android:layout_centerHorizontal="true"
        android:text="@string/vewGamesButton" />

    <Button
        android:id="@+id/viewCoursesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/viewGamesButton"
        android:layout_below="@+id/viewGamesButton"
        android:text="@string/viewCoursesButton" />
</RelativeLayout>
